# inkboard

./: app.py  models.py  pyproject.toml  replit.md
static/css/: style.css
static/js/: script.js
templates/: dashboard.html  index.html  login.html  register.html
